update code bg color

--- a/src/app.css
+++ b/src/app.css
@@ -23,6 +23,7 @@
 		--destructive-foreground: 210 40% 98%;
 		--ring: 215 20.2% 65.1%;
 		--radius: 0.5rem;
+		--code: 287 20% 15%;
 	}
 	.dark {
 		--background: 224 71% 4%;
@@ -45,6 +46,7 @@
 		--destructive-foreground: 210 40% 98%;
 		--ring: 216 34% 17%;
 		--radius: 0.5rem;
+		--code: 359 51% 48%;
 	}
 }
 @layer base {
