fix: font not imported properly

--- a/src/app.css
+++ b/src/app.css
@@ -23,7 +23,7 @@
 		--destructive-foreground: 210 40% 98%;
 		--ring: 215 20.2% 65.1%;
 		--radius: 0.5rem;
-		--code: 287 20% 15%;
+		--code: 287 25% 20%;
 	}
 	.dark {
 		--background: 224 71% 4%;
@@ -55,6 +55,6 @@
 	}
 	body {
 		@apply bg-background text-foreground;
-		font-feature-settings: 'rlig' 1, 'calt' 1;
+		font-feature-settings: "rlig" 1, "calt" 1;
 	}
 }
